<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:tag="home_menu_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sura"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textColor="@color/intro_black"
        android:text="@string/hola"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6">

        <at.grabner.circleprogress.CircleProgressView
            android:id="@+id/progress_circular"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cpv_autoTextSize="true"
            app:cpv_barColor="@color/red_bar"
            app:cpv_barColor1="@color/yellow_bar"
            app:cpv_barColor2="@color/green_bar"
            app:cpv_barWidth="5dp"
            app:cpv_maxValue="100"
            app:cpv_maxValueAllowed="100"
            app:cpv_minValueAllowed="0"
            app:cpv_outerContourColor="@color/gray_ligth_bar"
            app:cpv_outerContourSize="1dp"
            app:cpv_rimColor="@color/gray_ligth_bar"
            app:cpv_rimWidth="1dp"
            app:cpv_showUnit="true"
            app:cpv_textSize="30sp"
            app:cpv_unit="@string/porcent"
            app:cpv_value="10"

            />

        <TextView
            android:id="@+id/textView_resumen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:maxLines="2"
            android:minLines="1"
            android:text="@string/completar_requisitos"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        android:background="@drawable/backgroud_round_top_corners"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_de_requisitos"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_requirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/requirement_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>